switched to using CoffeeDto